# ebedke

./: .gitignore  LICENSE-MIT  NOTES.md  Pipfile  README.md  app.py  config.py.example  main.py  mypy.ini  pylintrc  pyproject.toml  requirements.txt  run.py  updater.py  web.py
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: python.yml
ebedke/: config.py.example  connections.py  ebedke.py  plugin.py  pluginmanager.py  settings.py  updater.py  web.py
ebedke/plugins/: ballahus.py  bartok.py  bartuczfaloda.py  bocelli.py  bonnie.py  cbacorvin.py  dagoba.py  dezso.py  divinporcello.py  emi.py  ezisbudai.py  fecske.py  finomfalat.py  firstlocal.py  foodie.py  fruccola.py  gilice.py  golvonal.py  govinda.py  greenhouse.py  haiphong.py  homefield.py  input.py  intenzo.py  jedermann.py  jegkert.py  joasszony.py  kajahu.py  kbarcelona.py  keg.py  keksz.py  kerova.py  kiosk.py  (+36 more)
provider/: __init__.py  amici.py  bocelli.py  bridges.py  burgerking.py  cbacorvin.py  dagoba.py  dezso.py  emi.py  ezisbudai.py  foodie.py  fruccola.py  gilice.py  golvonal.py  greenhouse.py  homefield.py  input.py  intenzo.py  jegkert.py  joasszony.py  kajahu.py  kbarcelona.py  keg.py  kerova.py  kiosk.py  kompot.py  manga.py  marcello.py  monks.py  muzikum.py  ninetables.py  officebistro.py  opus.py  otszaz.py  pastafresca.py  portum.py  pqs.py  restaurants.py  seastars.py  semmiextra.py  (+13 more)
resources/: favicon.svgz  nginx.conf  uwsgi.ini
static/: index.html  manifest.json  manifest.webmanifest
templates/: index.html
tests/: test_ebedke.py  test_settings.py  test_text.py
(+24 files in other folders)
